<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <RelativeLayout
        android:id="@+id/rl_TopBar"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/topbar_background">

        <TextView
            android:id="@+id/tv_personName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            style="@style/TopBarName"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developer(wannabe)"
            android:layout_below="@id/tv_personName"
            android:layout_marginLeft="20dp"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/pictureofme"
            android:layout_toRightOf="@id/tv_personName"
            android:layout_centerVertical="true"
            android:layout_marginLeft="80dp"
            />




    </RelativeLayout>
    
    <TextView
       android:id="@+id/tv_contact_me"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="CONTACT ME"
       android:layout_below="@id/rl_TopBar"
       android:layout_marginTop="10dp"
       android:layout_marginLeft="10dp"
       style="@style/TextViewsHeadings"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="e-mail"
        android:layout_below="@id/tv_contact_me"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        style="@style/TextViewHeadings2"/>

    <TextView
        android:id="@+id/tv_myemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:text="dino.pecurlic@gmail.com"
        style="@style/TextViewsText"/>

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_myemail"
        android:text="Phone number"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        style="@style/TextViewHeadings2"/>

    <TextView
        android:id="@+id/tv_my_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="098/1287-308"
        android:layout_below="@id/tv_phone_number"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        style="@style/TextViewsText"/>

    <TextView
        android:id="@+id/tv_skills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SKILLS"
        android:layout_below="@id/tv_my_phone_number"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        style="@style/TextViewsHeadings"/>

    <TextView
        android:id="@+id/tv_programming_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Programming languages"
        android:layout_below="@id/tv_skills"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        style="@style/TextViewHeadings2"/>

    <TextView
        android:id="@+id/tv_my_programming_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_programming_languages_text"
        android:layout_below="@id/tv_programming_languages"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        style="@style/TextViewsText"/>

    <TextView
        android:id="@+id/tv_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_my_programming_languages"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="LANGUAGES"
        style="@style/TextViewsHeadings"/>

    <TextView
        android:id="@+id/tv_my_languages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Croatian, English"
        android:layout_below="@id/tv_languages"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        style="@style/TextViewsText"/>

    <TextView
        android:id="@+id/tv_Interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="INTEREST"
        android:layout_below="@id/tv_my_languages"
        style="@style/TextViewsHeadings"/>

    <TextView
        android:id="@+id/tv_my_interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/tv_Interests"
        android:text="@string/my_interests_text"
        style="@style/TextViewsText"/>

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_TopBar"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="110dp"
        android:text="SUMARRY"
        style="@style/TextViewsHeadings"/>

    <TextView
        android:id="@+id/tv_my_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_summary"
        android:layout_toRightOf="@id/tv_email"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/my_summary_text"
        style="@style/TextViewsText"/>

    <TextView
        android:id="@+id/tv_education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_my_summary"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:text="EDUCATION"
        style="@style/TextViewsHeadings"/>

    <TextView
        android:id="@+id/ty_my_education_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_education"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:text="Bachelor degree"
        style="@style/TextViewHeadings2"/>

    <TextView
        android:id="@+id/tv_my_education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ty_my_education_degree"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/ferit_fullName_text"
        style="@style/TextViewsText"
        />

    <TextView
        android:id="@+id/tv_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_my_education"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:text="EXPERIENCE"
        style="@style/TextViewsHeadings"/>

    <TextView
        android:id="@+id/tv_my_experience"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_experience"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="10dp"
        android:text="@string/my_experience_text"
        style="@style/TextViewsText"/>




</RelativeLayout>
